# astrolabe-insights-hub

./: .gitignore  README.md  build_hook.py  bun.lockb  eslint.config.js  index.html  package.json  pyproject.toml  vite.config.ts
.github/workflows/: release.yml  test.yml
docs/: alternative-frontends.md
server/: Makefile  go.mod
server/api/: aim_client.go  aim_client_test.go  aim_testhelpers_test.go  cache.go  cache_test.go  cost.go  cost_test.go  evals_test.go  experiments_handler_test.go  handlers.go  include_resolver_test.go  state_db_testhelpers_test.go  state_reader.go  state_reader_test.go
server/cmd/: main.go
server/config/: colors.json
src/: main.tsx  routeTree.gen.ts  router.tsx  styles.css
src/components/: app-shell.tsx  comparison-modal.tsx  copyable-hash.tsx  cost-page.tsx  default-error-component.tsx  eval-tab.tsx  experiments-list.tsx  filter-dropdown.tsx  freshness-pill.tsx  fsm-history.tsx  metric-chart.tsx  runs-panel.tsx  shortcuts-help.tsx  state-badge.tsx  status-dot.tsx
src/hooks/: chart-zoom-context.ts  chart-zoom-provider.tsx  theme-context.ts  theme-provider.tsx  use-chart-zoom.ts  use-chart-zoom.tsx  use-global-shortcuts.ts  use-polling.ts  use-theme.ts  use-theme.tsx
src/lib/: api.ts  format.ts  seed-data.ts  types.ts
src/routes/: __root.tsx  cost.tsx  experiment.tsx  index.tsx
